# fit

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  bug.txt  dune-project  fit.opam  fit.opam.template  url.sh
.github/workflows/: ci.yml
data/: SpdCoach-2739398-20220804-0711AM.fit  xpress-4x-2022-08-03.fit
data/coros/: coros-dura-medium-20260424150313.fit  coros-dura-small-20260424145809.fit
jq/: fit2csv
lib/: dune  fit.ml  fit.mli
spec/: resources.md
src/: dune  main.ml
tmp/: cast.ml
utils/: fit2csv  plot.r  probe.sh
