opam-version: "2.0"
name: "fit"
synopsis: "A parser for FIT files"
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
license: "MIT"
homepage: "https://github.com/lindig/fit"
bug-reports: "https://github.com/lindig/fit/issues"
depends: [
  "dune" {build}
  "cmdliner"
  "angstrom"
  "ezjsonm"
  "rresult"
  "ISO8601"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/lindig/fit.git"
