opam-version: "2.0"
name: "fit"
synopsis: "A parser for Garmin FIT data files"
description: """\
Fit is library for reading FIT files as they are produced by Garmin and
other fitness devices. It comes with a small command-line tool to emit
some of that information as JSON, mostly for debugging. Fit is not
comprehensive but reads the most important records from a FIT file that
contains the actual periodic measurements."""
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
license: "MIT"
homepage: "https://github.com/lindig/fit"
bug-reports: "https://github.com/lindig/fit/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "cmdliner" {>= "1.1.0"}
  "angstrom" {>= "0.15.0"}
  "yojson" {>= "2.1.0"}
  "rresult" {>= "0.6.0"}
  "ISO8601" {>= "0.2.6"}
]
available: arch != "x86_32" & arch != "arm32"
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/lindig/fit.git"
